--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Hello, OpenShift.</h1>
+<h1>Hello, Minishift.</h1>
+<p> ITS REALLY AWESOME. </p>
 </body>
 </html>
